name:           haste-commonjs
version:        0.1
cabal-version:  >= 1.2
category:       Web
build-type:     Simple
author:         Joel Burget
maintainer:     joelburget@gmail.com

executable haste-commonjs
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base >= 4,
                   parsec,
                   text,
                   text-format,
                   aeson == 0.8.0.2,
                   bytestring == 0.10.4.0,
                   vector == 0.10.12.2,
                   unordered-containers == 0.2.5.1,
                   process == 1.2.0.0
  ghc-options:     -Wall
  other-modules:
                   Parser,
                   Printer

